# AIGallery-Rewrite

./: .gitignore  MNN_3.5.0_MIGRATION_GUIDE.md  MNN_3.5.0_UPGRADE_COMPLETION.md  README.md  build.gradle.kts  build_jni_v35.sh  gradle.properties  gradlew  settings.gradle.kts  setup_gradle.sh
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mnn_llm.cpp
app/src/main/cpp/include/llm/: llm.hpp
app/src/main/java/com/aigallery/rewrite/: AIGalleryApp.kt  MainActivity.kt
app/src/main/java/com/aigallery/rewrite/assets/skills/: calculator.md  datetime.md  translation.md  weather.md
app/src/main/java/com/aigallery/rewrite/context/: ContextManager.kt  GSSCPromptBuilder.kt  MemoryCompressor.kt  ReflectionChecker.kt
app/src/main/java/com/aigallery/rewrite/data/local/: AIGalleryDatabase.kt
app/src/main/java/com/aigallery/rewrite/data/local/dao/: ChatDao.kt  MemoryDao.kt  TaskDao.kt
app/src/main/java/com/aigallery/rewrite/data/repository/: ChatRepository.kt  MemoryRepository.kt
app/src/main/java/com/aigallery/rewrite/devicecontrol/: AccessibilityServiceImpl.kt  DeviceControlFunctions.kt  DeviceControlManager.kt  DeviceControlService.kt  GestureRecorder.kt  ScreenAnalyzer.kt
app/src/main/java/com/aigallery/rewrite/di/: AppModule.kt  InferenceModule.kt
app/src/main/java/com/aigallery/rewrite/domain/model/: AIModel.kt  AppSettings.kt  ChatModels.kt  CustomTaskModels.kt  MemoryModels.kt  SingleTurnModels.kt
app/src/main/java/com/aigallery/rewrite/download/: MnnModelDownloader.kt  ModelDownloadManager.kt
app/src/main/java/com/aigallery/rewrite/inference/: InferenceEngine.kt  InferenceManager.kt  MnnInferenceEngine.kt  MnnInferenceEngineV35.kt  OtherEngines.kt  SpeculativeDecoder.kt
app/src/main/java/com/aigallery/rewrite/memory/: MemoryManager.kt  VectorStore.kt
app/src/main/java/com/aigallery/rewrite/skill/: SkillModels.kt  SkillRegistry.kt
app/src/main/java/com/aigallery/rewrite/tool/: BaseTool.kt  CalculatorTool.kt  CircuitBreaker.kt  DateTimeTool.kt  ReadFileTool.kt  ToolModels.kt  ToolRegistry.kt  WeatherTool.kt  WebSearchTool.kt
app/src/main/java/com/aigallery/rewrite/trace/: AgentTraceLogger.kt
app/src/main/java/com/aigallery/rewrite/ui/components/: CommonComponents.kt  ModelCard.kt
app/src/main/java/com/aigallery/rewrite/ui/navigation/: AppNavHost.kt  Screen.kt
app/src/main/java/com/aigallery/rewrite/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/aigallery/rewrite/util/: Extensions.kt  FileLogger.kt
app/src/main/java/com/aigallery/rewrite/worker/: ModelDownloadWorker.kt
app/src/main/java/com/localai/server/engine/: LlamaEngine.kt  LlamaEngineMnn35.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_splash.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  data_extraction_rules.xml
(+21 files in other folders)
